src/parser/snapshots/almond__parser__statement__tests__break_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"break a;\".into()).unwrap().1"
---
{
  "type": "BreakStatement",
  "label": {
    "type": "Identifier",
    "name": "a",
    "start": 6,
    "end": 7
  },
  "start": 0,
  "end": 8
}
