src/parser/snapshots/almond__parser__statement__tests__break_stmt-3.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"break\\na;\".into()).unwrap().1"
---
{
  "type": "BreakStatement",
  "label": null,
  "start": 0,
  "end": 5
}
