src/parser/snapshots/almond__parser__statement__tests__continue_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"continue a;\".into()).unwrap().1"
---
{
  "type": "ContinueStatement",
  "label": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "start": 0,
  "end": 11
}
