src/parser/snapshots/almond__parser__statement__tests__debugger_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"debugger;\".into()).unwrap().1"
---
{
  "type": "DebuggerStatement",
  "start": 0,
  "end": 9
}
